# python-demo

./: README.md
101-pyinstaller/: Pipfile  README.md
102-cx_Freeze/: Pipfile  README.md  setup.py
103-pyside6/100-hello_pyside6/: Pipfile  README.md
103-pyside6/101-cx_freeze/: Pipfile  README.md  main.py  setup.py
104-nacos-sdk-python/: API Reference.md  Pipfile  demo01.py
105-aliyun-send-message/: Pipfile  README.md  demo.py
106-alibabacloud-send-message/: Pipfile  README.md  demo01_sendsms.py  random_code.py  sendsms.py
107-email/: .env.example  demo01.py  demo02.py  demo03_pop.py  demo04_email_read.py  demo04_email_send.py  mail_verifier.py  test.txt
108-imbox/: Pipfile  README.md  demo.py
109-requests-logging/: demo.py  pyproject.toml
109-tencet-ModifySecurityGroupPolicies/: .env.example  main.py  pyproject.toml
110-tencet-ModifySecurityGroupPolicies/: main.py  modify.py  pyproject.toml  query.py
111-pinhole/: README.md  pinhole.py  pyproject.toml
112-apscheduler-demo/: demo01.py  demo02_run_once.py  demo03_add_job_after_start.py  demo04_modify_job.py  pyproject.toml
113-schedule-demo/: demo01.py  demo02.py  demo03_run_once.py  demo04_cancel_job.py  demo05_thread.py  demo06_run_backgroud.py  pyproject.toml
114-nuitka-demo/: .gitignore  README.md  build.sh  pyproject.toml
115-get_ip/: get_ip.py  pyproject.toml
