[tool.poetry]
name = "requests-logging"
version = "0.1.0"
description = ""
authors = ["AngelLiang <pl01665077@163.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
